syntax = "proto3";

package ai.stigmer.agentic.environment.v1;

// EnvironmentSpec defines a collection of configuration and secrets.
// Created before AgentInstance or WorkflowInstance, referenced during instance creation.
message EnvironmentSpec {
  // Human-readable description of this environment.
  // Example: "Production AWS credentials for deployment"
  string description = 1;

  // Key-value pairs containing both configuration and secrets.
  // Each value includes a flag indicating whether it's a secret.
  // Example: {"AWS_REGION": {value: "us-west-2", is_secret: false},
  //           "AWS_ACCESS_KEY_ID": {value: "AKIA...", is_secret: true}}
  map<string, EnvironmentValue> data = 2;
}

// EnvironmentValue represents a single configuration or secret value.
message EnvironmentValue {
  // The actual value.
  // - If is_secret=true: This value is encrypted at rest and redacted in logs
  // - If is_secret=false: This value is stored as plaintext
  // Note: Value can be empty when defining environment variables in specs.
  //       Actual values are typically provided at runtime during execution.
  string value = 1;

  // Whether this value should be treated as a secret.
  // When true:
  // - Value is encrypted at rest
  // - Value is redacted in logs
  // - Value requires special permissions to read
  // When false:
  // - Value is stored as plaintext
  // - Value is visible in audit logs
  bool is_secret = 2;

  // Optional description for documentation.
  // Example: "AWS access key for S3 bucket access"
  string description = 3;
}
